Fix header menu view on small screens

--- a/sass/custom/reset.scss
+++ b/sass/custom/reset.scss
@@ -27,8 +27,6 @@ body {
 
 .cell {
 	flex: 0 0 auto;
-	min-height: 0px;
-	min-width: 0px;
 	width: 100%;
 }
 
